[package]
name = "nats-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.35.1"
clap = { version = "4.5.7", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.27.0"
serde = "1.0.203"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tokio-util = "0.7.11"
